--- a/src/UI/Views/Home/Index.cshtml
+++ b/src/UI/Views/Home/Index.cshtml
@@ -1,7 +1,5 @@
-﻿@page
-@model IndexModel
-@{
-    ViewData["Title"] = "Home page";
+﻿@{
+    ViewData["Title"] = "Contact Home Application Page";
 }
 
 <div class="text-center">
