--- a/src/UI/Views/Login/Index.cshtml
+++ b/src/UI/Views/Login/Index.cshtml
@@ -1,7 +1,5 @@
-﻿@page
-@model PrivacyModel
-@{
-    ViewData["Title"] = "Privacy Policy";
+﻿@{
+    ViewData["Title"] = "Login into the system";
 }
 <h1>@ViewData["Title"]</h1>
 
